devel
-----

* Fixed a bug in the web interface that displayed the error "Not authorized to 
  execute this request" when trying to create an index in the web interface in a
  database other than `_system` with a user that does not have any access
  permissions for the `_system` database.
  The error message previously displayed error actually came from an internal
  request made by the web interface, but it did not affect the actual index
  creation.

* Added ability to display Coordinator and DBServer logs from inside the Web UI
  in a clustered environment when privileges are sufficient. 
  Additionally, displayed log entries can now be downloaded from the web UI in
  single server and in cluster mode.

* The Web UI's info view of a collection now displays additional properties and
  statistics (e.g. RocksDB related figures, sharding information and more).

* Improve progress reporting for shard synchronization in the web UI.
  The UI will now show how many shards are actively syncing data, and will 
  provide a better progress indicator, especially if there is more than one
  follower for a shard.

* Fixed issue BTS-309: The Graph API (Gharial) did not respond with the correct
  HTTP status code when validating edges. It now responds with 400 (Bad Request)
  as documented and a new, more precise error code (1947) and message if a vertex
  collection referenced in the _from or _to attribute is not part of the graph.

* Added `--shard` option to arangodump, so that dumps can be restricted to one or
  multiple shards only.

* Enable statistics in web UI in non-`_system` databases in cluster mode.
  In cluster mode, the web UI dashboard did not display statistics properly
  when not being logged in to the `_system` database. For all other databases
  than `_system`, no statistics were displayed but just some "No data..."
  placeholders.
  Statistics for non-`_system` databases were not properly displayed since